--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "mockman-js": "^1.1.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-error-boundary": "^3.1.4",
     "react-icons": "^4.4.0",
+    "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slideshow-image": "^3.7.5",
