--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.27.2",
     "dayjs": "^1.11.2",
     "jwt-decode": "^3.1.2",
     "jwt-encode": "^1.0.1",
@@ -12,6 +13,7 @@
     "react-dom": "^18.1.0",
     "react-error-boundary": "^3.1.4",
     "react-icons": "^4.4.0",
+    "react-query": "^3.39.1",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
