--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,9 @@
 /node_modules
 /.pnp
 .pnp.js
-
+.idea/
+.vscode/
+.eslintcache
 # testing
 /coverage
 
@@ -19,14 +21,8 @@
 .env.test.local
 .env.production.local
 .eslintcache
-
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-
-.vscode/settings.json
-
-
 
 .eslintrc.js
