--- a/package.json
+++ b/package.json
@@ -4,11 +4,19 @@
   "private": true,
   "dependencies": {
     "axios": "^0.27.2",
+    "bcryptjs": "^2.4.3",
+    "buffer": "^6.0.3",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
+    "crypto-es": "^1.2.7",
     "dayjs": "^1.11.2",
+    "dotenv": "^16.0.1",
+    "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "jwt-encode": "^1.0.1",
     "miragejs": "^0.1.45",
     "mockman-js": "^1.1.5",
+    "razorpay": "^2.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-error-boundary": "^3.1.4",
@@ -18,6 +26,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slideshow-image": "^3.7.5",
+    "react-toastify": "^9.0.4",
     "uuid": "^8.3.2"
   },
   "scripts": {
