--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Nucleus-store",
-  "short_name": "Nucleus-store",
+  "name": "Electric-store",
+  "short_name": "Electric-store",
   "theme_color": "#000000",
   "background_color": "#000000",
   "display": "standalone",
